# drf-rw-serializers

./: .coveragerc  .gitignore  .isort.cfg  .pre-commit-config.yaml  .prospector.yaml  .readthedocs.yaml  .ruff.toml  .travis.yml  AUTHORS  AUTHORS.rst  CHANGELOG.rst  LICENSE.txt  MANIFEST.in  Makefile  README.rst  conftest.py  manage.py  pylintrc  pylintrc_tweaks  pyproject.toml  setup.cfg  setup.py  test_settings.py  tox.ini
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: config.yml  release.yml  tests.yml
.pytest_cache/v/cache/: lastfailed
.tx/: config
docs/: Makefile  conf.py  cross_library_integrations.rst  getting_started.rst  index.rst  installation.rst  make.bat  testing.rst  usage.rst
drf_rw_serializers/: __init__.py  apps.py  generics.py  mixins.py  viewsets.py
example_app/: __init__.py  apps.py  models.py  serializers.py  urls.py  views.py
example_app/migrations/: 0001_initial.py
requirements/: base.in  dev.in  dev.txt  doc.in  doc.txt  quality.in  quality.txt  test.in  test.txt  travis.in  travis.txt
test_utils/: __init__.py  base_tests.py
tests/: test_generics.py  test_mixins.py  test_viewsets.py
